--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,35 @@
-altair==5.1.2
-numpy==1.24.2
-pandas==2.1.1
-pyfunctional==1.4.3
-streamlit==1.28.2
-pylint==3.0.2
-geopandas==0.13.2
+altair==5.2.0
+altair-data-server==0.4.1
+altair-viewer==0.4.0
+attrs==23.2.0
+certifi==2024.2.2
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
+dill==0.3.8
+fiona==1.9.5
+geopandas==0.14.3
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+MarkupSafe==2.1.5
+numpy==1.26.4
+packaging==23.2
+pandas==2.2.0
 plotly==5.18.0
+portpicker==1.6.0
+psutil==5.9.8
+pyfunctional==1.4.3
+pyproj==3.6.1
+python-dateutil==2.8.2
+pytz==2024.1
+referencing==0.33.0
+rpds-py==0.17.1
+shapely==2.0.2
+six==1.16.0
+tabulate==0.9.0
+tenacity==8.2.3
+toolz==0.12.1
+tornado==6.4
+tzdata==2023.4
+vl-convert-python==1.2.3
